--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.12.2",
     "emailjs-com": "^3.2.0",
+    "lucide-react": "^0.544.0",
     "motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
